update .gitignore for elm

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,12 @@
 *.dll
 *.so
 *.dylib
-
-# Test binary, build with `go test -c`
 *.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+build/
+elm-stuff
+repl-temp-*
+node_modules
+.DS_Store
+.cache
+dist
