--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "elm-hot": "^1.1.1",
     "node-elm-compiler": "^5.0.4",
     "parcel-bundler": "1.12.3"
+  },
+  "scripts" {
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html"
   }
 }
