--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,10 +6,16 @@
 	  "src": "/images/icon-192.png",
 	  "type": "image/png",
 	  "sizes": "192x192"
+	},
+	{
+	  "src": "/images/icon-512.png",
+	  "type": "image/png",
+	  "sizes": "512x512"
 	}
   ],
   "start_url": "/",
   "background_color": "#FFFFFF",
   "display": "standalone",
+  "orientation": "landscape",
   "theme_color": "#82b34a"
 }
